# src/routes/authRoutes.js
@@ -7,6 +7,8 @@ const {
   loginUser,
   forgotPassword,
   resetPassword,
+  forgotPasswordOTP,
+  resetPasswordWithOTP,
   getProfile,
   changePassword,
 } = require('../controllers/authController');
@@ -16,7 +18,8 @@ router.post('/register', registerUser);
 router.post('/login', loginUser);
 router.post('/forgot-password', forgotPassword);
 router.post('/reset-password', resetPassword);
-
+router.post('/forgot-password-otp', forgotPasswordOTP);
+router.post('/reset-password-otp', resetPasswordWithOTP);
 
 router.get('/profile', protect, getProfile);
 router.post('/change-password', protect, changePassword);
